fix styles on smaller CKEditor instance

--- a/pagewidth/styles/pagewidth.css
+++ b/pagewidth/styles/pagewidth.css
@@ -36,6 +36,8 @@
   -webkit-appearance: none;
   margin-left: 4px;
   margin-right: 4px;
+  width: 80px;
+  display: inline-block;
 }
 .cke_pagewidth input[type='range']:focus {
   outline: none;
